--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@
 2) Hard drive freeze
 2# This seems to be caused when the lspci probe is left active in 'less' mode, the other option of a PIC bus freez-up caused by access to the audio device was eliminated through testing
 
-3) The IRQ routing device on PCI bus 0 domain 0 seems to be @ 0000.00.1f which is the LPC bridge or the IDA bridge, biosdecode does not provide sufficient information
+3) The IRQ routing device on PCI bus 0 domain 0 seems to be @ 0000.00.1f which is the LPC bridge or the LDC bridge, biosdecode does not provide sufficient information
 
 4) The IRQ line and pin parts of the configuration register of the audio device(1b) seem to be non-initialized as tehy show 0, non the less the -vv option on lspci shows the correct IRQ is assigned
 
