--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-ALSA HDA module to configure the secondary ad1989 codec on the catalysis SCH
+ALSA HDA module to configure the secondary ad1989 codec on the catalysis SC
+
+
+
+testH
